--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700;800&display=swap');
+
 
 
 * {
@@ -12,6 +14,7 @@
 
 body {
     box-sizing: border-box;
+    font-family: 'Cairo', sans-serif;
 }
 
 .text-main {
