--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ nav {
     position: absolute;
     bottom: -33px;
     width: 100%;
-    background-color: #004991e3;
+    /* background-color: #004991e3; */
     transition: all 300ms;
 }
 
