course_content & course_details & photos & videos & download_center

--- a/css/global.css
+++ b/css/global.css
@@ -17,6 +17,16 @@ body {
     font-family: 'Cairo', sans-serif;
 }
 
+::-moz-selection { /* Code for Firefox */
+    color: #fff;
+    background: var(--mainColor);
+}
+  
+::selection {
+    color: #fff;
+    background: var(--mainColor);
+}
+
 .text-main {
     color: var(--mainColor);
 }
